# EasySocket

./: .gitignore  README.md
EastClient/: EastClient.sln
EastClient/EastClient/: EastClient.vcxproj
EasyClient/: CELLTimeStamp.hpp  CMakeLists.txt  CommonDef.h  EasyClient.sln  EasyTcpClient.h  main.cpp
EasyClient/EasyClient/: CommonDef.h  EasyClient.vcxproj  EasyClient.vcxproj.filters  EasyTcpClient.cpp  EasyTcpClient.h  EasyTcpClient.hpp  Message.hpp  main.cpp
EasyServer/: CELLTimeStamp.hpp  CMakeLists.txt  CellSemaphore.hpp  CellServer.cpp  CellServer.h  CellTask.cpp  CellTask.h  CellThread.hpp  CellTimeStamp.hpp  Client.hpp  CommonDef.h  EasyServer.sln  EasyTcpServer.cpp  EasyTcpServer.h  HeaderFile.h  main.cpp
EasyServer/EasyServer/: Alloctor.cpp  Alloctor.h  CELLTimeStamp.hpp  CellObjectPool.hpp  CellServer.cpp  CellServer.h  CellTask.cpp  CellTask.h  Client.hpp  CommonDef.h  EasyServer.vcxproj  EasyServer.vcxproj.filters  EasyTcpServer.cpp  EasyTcpServer.h  EasyTcpServer.hpp  HeaderFile.h  MemoryMgr.hpp  main.cpp
